# cv-math-solver

./: README.md  drawing.py  hand_detector.py  main.py  pyproject.toml  requirements.txt  utils.py
