[project]
name = "math-solver-cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvzone>=1.6.1",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.4",
    "mediapipe>=0.10.21",
    "streamlit>=1.42.2",
]
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
